-----------------------------
lambkit-0.2-alpha2：

新增：增加Msch工具类，简化生成器代码
新增：增加ActiveMQ消息功能支持
新增：增加Redis集群支持
优化：优化jwt参数配置方式
删除：删除DevelopModule，改用LmsModule
删除：删除部分未实现的类

-----------------------------
lambkit-0.2-alpha1：

新增：保留原server中的AppServer，更改为DefaultApplication。
新增：增加jwt权限管理机制JwtKit，查看com.lambkit.plugin.jwt。
新增：增加网易云信im服务端操作工具NimKit，查看com.lambkit.plugin.nim。
新增：增加网易云信短信服务工具NimMessageKit，查看com.lambkit.plugin.nim。
新增：UpmsUserRoleService的hasRole方法
新增：BaseController的getParameterMap、getParaToDouble和getParaToFloat方法
新增：MSCH模型，结合代码生成器和MSCH模板生成lambkit最佳实践代码。
优化：升级JFianl到3.8。
优化：优化启动方式，默认使用Undertow。
优化：BaseModel增加setAttrs方法可以接收kv和json数据。
优化：DefaultModule中setJsonFactory(new MixJsonFactory());
优化：优化代码生成器Generator，方便使用，减少代码量。
优化：优化自动注册Module、Controller、Tag的机制。
优化：优化DevelopModule的位置，放到DefaultJFinalConfig，防止二次开发因缺少数据库而出错。
优化：优化微服务网关功能。
移除：删除com.lambkit.server及相关内容。

-----------------------------
lambkit-0.1-alpha4：

新增：增加meta的管理Controller，新增“com.lambkit.module.meta.web.controller.manage”包。
新增：增加meta页面，webapp/lambkit/mgrdb/dev/meta
新增：增加jwt权限管理机制JwtKit，查看com.lambkit.plugin.jwt。
新增：增加网易云信im服务端操作工具NimKit，查看com.lambkit.plugin.nim。
新增：增加网易云信短信服务工具NimMessageKit，查看com.lambkit.plugin.nim。
修复：修改RpcKit"检测端口占用"功能使用不当导致的service无法注册问题。

-----------------------------
lambkit-0.1-alpha3：

新增：添加BaseModel中相关Example的方法。
新增：Model中加入***Criteria快速创建方法，可隐藏***Criteria。
新增：增加UpmsManager自动判断注册本地或远程service函数，增加apiservice获取函数。
修复：修改Dialect中Example组合SQL错误，更改Example相关方法。
修复：修改Dialect中Example组合SQL的in逻辑返回为空错误。
修复：修改Dialect中Example组合SQL错误。
修复：修改MetaMgrModule中的错误。
优化：删除Example与QueryParas之间的关系，改由生成SqlPara
优化：更新BaseService方法。
优化：更新meta中olap和join部分的结构，并更新代码功能。
优化：完善MetaBuilder可配置postgresql的模式。
优化：修改BaseService中update方法，增大多行更新。
优化：配合BaseService中update方法增加dialect中的update的SQL语句生成。


-----------------------------
lambkit-0.1-alpha2:

新增：com.lambkit.db.mgr.IField和ITable增加Map<String, Object> getAttrs();方法。
新增：增加DefaultWechatController展示Wechat用法。
新增：LambkitModule增加autoRegister***方法，自动注册module，route，engine等。