@@ -218,6 +218,11 @@
     		<artifactId>activemq-pool</artifactId>
     		<version>5.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>0.9.0.1</version>
+		</dependency>
 
 		<!-- rpc motan -->
 		<dependency>
