@@ -45,7 +45,7 @@ lambkit.web.excel=false
 lambkit.db.type=mysql
 lambkit.db.url=jdbc:mysql://localhost/lambkit_opensource?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 lambkit.db.user=root
-lambkit.db.password=
+lambkit.db.password=young520lamb
 lambkit.db.dbname=lambkit_opensource
 #db plugin default druid(support:druid,hikari)
 lambkit.db.factory=com.lambkit.db.datasource.DruidDataSourceFactory
