@@ -22,7 +22,7 @@
 		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
 		<init-param>
 			<param-name>configClass</param-name>
-			<param-value>com.lambkit.DefaultJFinalConfig</param-value>
+			<param-value>com.lambkit.Application</param-value>
 		</init-param>
 	</filter>
 	
